# Crash-Tshoot

./: CONTEXT.md  INCIDENTS.md  README.md  Run-Diagnoser-Remote.bat  Run-Diagnoser.bat  Run-EventViewer.bat  Run-Python-Diagnoser.bat  STOPCODES.md  SystemDiagnoser.ps1  pyproject.toml  requirements.txt  run-diagnoser.command  run-diagnoser.sh  run_diagnoser.py
Reports/: Diagnosis_DESKTOP-72P233G_2026-07-16_122030.json  Diagnosis_DESKTOP-72P233G_2026-07-16_122054.json  Diagnosis_DESKTOP-72P233G_2026-07-21_101338.json  Diagnosis_DESKTOP-72P233G_2026-07-21_101647.json  Diagnosis_DESKTOP-72P233G_2026-07-21_101727.json  Diagnosis_DESKTOP-72P233G_2026-07-21_151415.json  Diagnosis_DESKTOP-72P233G_2026-07-21_151433.json  Diagnosis_DESKTOP-72P233G_2026-07-22_100819.json  Events_2026-07-21_151859.csv  Events_2026-07-21_151859.html  Events_2026-07-21_151859.json  Filter_2026-07-21_151859.json
crash_tshoot/: __init__.py  __main__.py  cli.py  event_viewer.py  incidents.py  models.py  patterns.py  report.py  root_cause.py
crash_tshoot/collectors/: __init__.py  base.py  bsd.py  generic_logs.py  linux.py  macos.py  windows.py
crash_tshoot/llm/: __init__.py  lmstudio.py
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  EVENT_VIEWER.md  INCIDENT_PROFILES.md  LINUX.md  LLM_LM_STUDIO.md  LOG_ANALYSIS.md  PLATFORMS.md  WINDOWS.md
