[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crash-tshoot"
version = "2.1.0"
description = "Cross-platform crash & log diagnoser (Windows, Linux, macOS, BSD)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Personal / use at your own risk" }
authors = [{ name = "Crash-Tshoot" }]
dependencies = []

[project.scripts]
crash-tshoot = "crash_tshoot.cli:main"

[tool.setuptools.packages.find]
include = ["crash_tshoot*"]
